[metadata]
name = ima-predeployed
version = file: version.txt
author = Dmytro Stebaiev
author_email = dmytro@skalelabs.com
description = A tool to generate config for predeployed IMA
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/skalenetwork/IMA
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Affero General Public License v3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.6
install_requires =
    predeployed-generator >= 1.1.0a0
    web3 < 6.0.0 # TODO: remove with new predeployed-generator

[options.packages.find]
where = src
